Header, Nav, and page links added!

--- a/about.html
+++ b/about.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS Folder/style.css">
     <title>About</title>
 </head>
 <body>
+    <h1>Final Project</h1>
     
+    <div class="nav">
+    <nav>
+        <ul><a href="index.html">Home</a></ul>
+            <ul><a href="about.html">About</a></ul>
+            <ul><a href="contact.html">Contact</a></ul>
+    
+    </nav>
+    </div>
+
+
+
+
 </body>
 </html>
