added contact form with no data location

--- a/contact.html
+++ b/contact.html
@@ -33,5 +33,16 @@
     
     </nav>
     </div>
+
+    <h1>Contact Me!</h1>
+    <form action="/action_page.php">
+        <label for="fname">First name:</label>
+        <input type="text" id="fname" name="fname" placeholder="Enter Name"><br><br>
+        <label for="lname">Email:</label>
+        <input type="text" id="lname" name="lname" placeholder="Enter Email"><br><br>
+        <input type="submit" value="Submit">
+      </form>
+
+
 </body>
 </html>
