Updated CSS, Index Page, fixed Nav

--- a/contact.html
+++ b/contact.html
@@ -25,16 +25,19 @@
 <body>
     <h1>Final Project <i class="icon-linux"></i></h1>
     
-    <div class="nav">
     <nav>
-        <ul><a href="index.html">Home</a></ul>
-            <ul><a href="about.html">About</a></ul>
-            <ul><a href="contact.html">Contact</a></ul>
+    <div class="nav">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
     
-    </nav>
+    </ul>
     </div>
+    </nav>
 
-    <h1>Contact Me!</h1>
+
+    <h2>Contact Me!</h2>
     <form action="/action_page.php">
         <label for="fname">First name:</label>
         <input type="text" id="fname" name="fname" placeholder="Enter Name"><br><br>
