--- a/index.html
+++ b/index.html
@@ -26,24 +26,22 @@
 <body>
     <h1>Final Project <i class="icon-linux"></i> </h1>
     
-    <div class="nav">
     <nav>
-        <ul><a href="index.html">Home</a></ul>
-            <ul><a href="about.html">About</a></ul>
-            <ul><a href="contact.html">Contact</a></ul>
+    <div class="nav">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
     
-    </nav>
+    </ul>
     </div>
+    </nav>
 
-
-<h1>Here are some of my past radio interviews</h1>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/VcUF4_ylsWI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-<br>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Xm4B9CgiD2Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    <div style="display:block;text-align:left; font-size: xx-large;"> <img align="left" src="/IMG Folder/Ray.jpg" border="0" width="600px" height="600px"></a> Hello! My name is Raymond Garcia!<br>
+        This is my simple webpage demo for Bitwise Industries.<br>
+        If you can't already tell, my two favorite colors is black and white.<br>
+        yeah I know, that's very plaine; but </div>
+        </div>
 
 </body>
 </html>
