finshed the contact page, and added footer, finishing touches

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
      
          <!-- Font Awesome-->
          <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-     
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
          <!--END Font Awesome-->
     <link rel="stylesheet" href="CSS Folder/style.css">
 
@@ -118,6 +118,13 @@
         new episode every sunday at 8pm PST.
       </h1>
       <br>
+
+      <div class="footer">
+        <p>Social Media</p>
+        <a href="https://www.facebook.com/synthzone/" target="_blank" class="fa fa-facebook"></a>
+        <a href="https://twitter.com/BigRay826" target="_blank" class="fa fa-twitter"></a>
+        <a href="https://www.instagram.com/bigray826/" target="_blank" class="fa fa-instagram"></a>
+      </div>
 
 </body>
 </html>
