--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     </nav>
 
-    <div style="display:block;text-align:left; font-size: xx-large; text-align: center;"> <img align="left" src="/IMG Folder/Ray.jpg" alt="picutre of Raymond Garcia" border="0" width="600px" height="600px">
+    <div style="display:block;text-align:left; font-size: xx-large; text-align: center;"> <img align="left" src="IMG Folder/Ray.jpg" alt="picutre of Raymond Garcia" border="0" width="600px" height="600px">
         
         <h2>Hello! My name is Raymond Garcia</h2>
         <br>
@@ -58,7 +58,7 @@
 
         <br>
 
-        <div style="display:block;text-align:left; font-size: xx-large;"> <a href="https://www.instagram.com/bigray826" target="_blank"><img align="right" src="/IMG Folder/Ray2.jpg" alt="picuture of Raymond Garcia" border="0" width="700px" height="800px"></a>
+        <div style="display:block;text-align:left; font-size: xx-large;"> <a href="https://www.instagram.com/bigray826" target="_blank"><img align="right" src="IMG Folder/Ray2.jpg" alt="picuture of Raymond Garcia" border="0" width="700px" height="800px"></a>
             
         <p style="text-align: center;">I really like coding, I've learned the basics when i was in high school; and this was a really great refesher class for me! I really would encourage anyone to take these courses, because they are fun, fast, and exciting! </p>
 
