--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
       }
       
       .hero-image {
-        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/IMG\ Folder/dj.jpg");
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("IMG\ Folder/dj.jpg");
         height: 50%;
         background-position: center;
         background-repeat: no-repeat;
